force-app/main/default/objects/Discount__c/fields/Discount_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applicable__c</fullName>
    <label>Discount Applicable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>