force-app/main/default/objects/Discount__c/fields/Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_percent__c</fullName>
    <label>Discount %</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>