force-app/main/default/objects/Discount__c/fields/Is_Discount_In_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_In_Percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Discount In Percentage?</label>
    <type>Checkbox</type>
</CustomField>